--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -56,7 +56,7 @@
     &-subtitle
       font-family: $sans-serif
       font-weight: $font-weight-normal
-      margin-left: .5em
+      margin-left: .2em
 
     &-content
       border-left: .4rem solid $color-light
@@ -114,6 +114,7 @@
       transform: rotate(0deg)
       transition: all $main-transition-duration
       width: $length
+      margin-left: 0.7em
 
       &-container
         display: flex
