--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -3,23 +3,26 @@
   background-color: inherit
   font-size: $font-size-small
   line-height: 1.2
+  padding: $verticalPadding $common-spacing
   position: relative
   text-align: left
 
   &:before
     background-color: $color-transparent
     border-radius: $common-spacing
+    bottom: $verticalPadding
     content: ' '
     display: block
-    width: $common-spacing / 2
+    left: 0
     position: absolute
     top: $verticalPadding
-    bottom: $verticalPadding
+
+    width: $common-spacing / 2
     z-index: 1
 
   &__content
     background-color: inherit
-    padding: $verticalPadding $common-spacing
+
     position: relative
 
   &__distance
@@ -36,13 +39,15 @@
     font-weight: $font-weight-bold
     padding-left: $common-spacing
     position: absolute
-    right: $common-spacing
-    top: $verticalPadding
+    right: 0
+    text-align: right
+    top: 0
+    width: 8.5rem
 
   &__link
-    bottom: 2.1rem
+    bottom: .7rem
     position: absolute
-    right: $common-spacing
+    right: 0
     text-decoration: underline
     text-transform: capitalize
 
