--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -147,9 +147,9 @@ $color-tertiary: $color-2
       padding-top: 0
 
     &-image-container
-      height: 0
+
       margin: 0 0 $common-spacing
-      padding-bottom: percentage(9/16)
+
       position: relative
       width: 100%
 
@@ -164,6 +164,10 @@ $color-tertiary: $color-2
 
       #{$c}--color-four &
         border-bottom: solid $common-spacing $color-4
+
+    &-image-ratio-container
+      padding-bottom: percentage(9/16)
+      height: 0
 
     &-image-ratio
       position: absolute
