--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -22,20 +22,6 @@ $color-tertiary: $color-2
   &__group
     margin-top: $common-spacing * 2
 
-    //&--style-one
-    //  #{$lpg}__card-cta-link
-    //    background-color: $color-1
-    //
-    //&--style-two
-    //  #{$lpg}__card-cta-link
-    //    background-color: $color-2
-    //
-    //&--style-three
-    //  #{$lpg}__card-cta-link
-    //    background-color: $color-3
-
-    &--other
-
   &__group-title-container
     display: flex
     margin-bottom: $common-spacing
@@ -90,45 +76,19 @@ $color-tertiary: $color-2
       flex-wrap: wrap
       padding: 0 8rem
 
-      #{$lpg}__card
-        width: calc(50% - #{$common-spacing * 2})
-
-      //&--number-of-cards-1 #{$lpg}__card
-      //  max-width: 24rem
-      //  width: 48%
-      //
-      //&--number-of-cards-2 #{$lpg}__card
-      //  width: 49%
-      //
-      //&--number-of-cards-3 #{$lpg}__card
-      //  width: 32%
-
     @include bp('landscape')
       padding: 0 11rem
 
-      //&--number-of-cards-1 #{$lpg}__card
-      //  max-width: 32rem
-      //  width: 48%
-      //
-      //&--number-of-cards-2 #{$lpg}__card
-      //  width: 49%
-      //
-      //&--number-of-cards-3 #{$lpg}__card
-      //  width: 32%
-
   &__card
     $c: &
-    border-top: solid $common-spacing $color-dark
     display: flex
     flex-direction: column
     font-size: 1.6rem
     line-height: 2.2rem
-    margin: 0 0 $common-spacing * 2
-    padding-top: $common-spacing
+    padding: 0 $common-spacing $common-spacing * 2
 
     @include bp('portrait')
-      margin-left: $common-spacing
-      margin-right: $common-spacing
+      width: 50%
 
     @include bp('landscape')
       font-size: 1.8rem
@@ -143,13 +103,14 @@ $color-tertiary: $color-2
         margin-right: auto
 
     &--has-image
-      border-top: none
       padding-top: 0
 
+      & #{$lpg}__card-title
+        border-top: none
+        padding-top: 0
+
     &-image-container
-
       margin: 0 0 $common-spacing
-
       position: relative
       width: 100%
 
@@ -181,7 +142,9 @@ $color-tertiary: $color-2
       width: 100%
 
   &__card-title
+    border-top: solid $common-spacing $color-dark
     font-size: 2.2rem
+    padding-top: 1.6rem
 
     @include bp('large')
       font-size: 3.2rem
