--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -13,7 +13,7 @@ $color-tertiary: $color-2
 
   @include bp('portrait')
     margin: 0 auto
-    max-width: initial
+    max-width: 100%
     padding: 0 4.8rem
 
   @include bp('landscape')
