--- a/web/app/themes/ppj/src/sass/components/quote.sass
+++ b/web/app/themes/ppj/src/sass/components/quote.sass
@@ -69,17 +69,21 @@
       font-size: 4rem
       line-height: 4.8rem
 
-  &__mark
+  &__mark svg
     width: 3.8rem
+    height: 2.5rem
 
     @include bp('portrait')
       width: 3.8rem
+      height: 2.5rem
 
     @include bp('landscape')
       width: 5.2rem
+      height: 3.4rem
 
     @include bp('large')
       width: 7.2rem
+      height: 4.7rem
 
 
     path
