changed margin for landing page card content

--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -149,6 +149,9 @@ $color-tertiary: $color-2
     @include bp('large')
       font-size: 3.2rem
 
+  &__card-content
+    padding-bottom: $common-spacing
+
   &__card-cta-link
     @extend .cta-link
 
