included footer logo
vertically inlined for now due to the white bar on the left of the logo
looking like it wanted to be aligned next to a border,
not floating in the middle of space by itself.

--- a/web/app/themes/ppj/src/sass/components/footer.sass
+++ b/web/app/themes/ppj/src/sass/components/footer.sass
@@ -31,6 +31,12 @@
     margin-top: $common-spacing * 2
     color: $color-white
 
+  &__logo
+    height: 6.4rem
+    margin-top: $common-spacing * 2
+    width: 15rem
+    @include background-img('svg/logo.svg')
+
 .facebook-footer
   background-color: $color-dark-section
   color: $color-white
