using small png for ycs leg logo for now
will use an svg when available

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -342,7 +342,7 @@
     pointer-events: auto
 
     .youth-custody &
-      @include background-img('svg/ycs_logo.svg')
+      @include background-img('ycs_white_small.png')
 
     @include bp('portrait')
       height: 6.4rem
