added some temporary styling to inter find-a-job page link/button
made the link a bit stronger so as to be more noticeable,
but not too strong as to dominate the page.
It was thought that the intended design for the button
was too dominant on the page without the new nav designs in place also.

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -360,11 +360,11 @@
       cursor: pointer
 
   &__job-list-message
-    background-color: rgba($color-main, 0.1)
+    background-color: rgba($color-main, 0.2)
     display: none
-    padding: $common-spacing
-    padding-bottom: $common-spacing * 2
-    text-align: left
+    font-weight: 700
+    padding: $common-spacing * 1.5
+    text-align: center
     text-decoration: underline
 
     .youth-custody &
