moved grayscale sass color variables to colors.sass
this seems like the most appropriate place for most color variables;
colors variables that modify leg specific colors must still be downstream of the leg specific sass
eg $color-main-shadow

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -28,31 +28,8 @@ $font-size-really-huge: 4.5rem
 $font-size-enormous: 4.8rem
 $font-size-gigantic: 5.6rem
 
-// colors
+// modified colors
 $color-main-shadow: darken($color-main, 5%)
-$color-main-hover: #007197
-$color-secondary: rgb(30,147,189)
-$color-section-highlighted: rgb(240,229,239)
-$color-extremely-light: rgb(240,240,240)
-$color-very-light: rgb(229,229,232)
-$color-light: rgb(204,204,204)
-$color-medium: rgb(240,240,240)
-$color-grey-medium: rgb(102,102,119)
-$color-quite-dark: rgb(51,51,74)
-$color-dark: rgb(25,25,52) //rgb(0,1,29) //#191934
-$color-very-dark: rgb(0,0,30)
-$color-dark-section: rgb(51,51,75) //rgb(50,52,74)
-$color-transparency-dark-start: rgb(0,0,30) //#00001e
-$color-transparency-dark-end: #33334b
-$color-body: #33334b
-$color-dark-transparent: rgba(0,0,0,0.85)
-$color-medium-transparent: rgba(0,0,0,0.3)
-$color-white: #fff
-$color-white-transparent: rgba(255,255,255,0.9)
-$color-transparent: rgba(0,0,0,0)
-$color-transparent2: rgba(255,255,255,0)
-$color-gradient-dark: $color-very-dark
-$color-gradient-light: $color-dark-section
 
 $length-portrait: 768px
 $length-landscape: 1024px
