--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -173,6 +173,7 @@ hr
 @import 'components/footer'
 @import 'components/header'
 @import 'components/job-summary'
+@import 'components/mobile-nav'
 @import 'components/nav-block'
 @import 'components/quote'
 @import 'components/find-a-job'
