--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -114,7 +114,7 @@
       font-size: 4.4rem
       line-height: 5rem
 
-  &__subtitle
+  &__lead-paragraph
     font-weight: $font-weight-bold
     font-size: 1.8rem
     line-height: 2.4rem
@@ -136,6 +136,7 @@
     flex-direction: column
     font-size: 1.6rem
     line-height: 2.2rem
+    margin-top: $common-spacing
 
     @include bp('portrait')
       font-size: 1.8rem
@@ -144,6 +145,7 @@
     @include bp('landscape')
       font-size: 2.4rem
       line-height: 3.2rem
+      margin-top: $common-spacing * 1.5
 
     @include bp('large')
       font-size: 2.8rem
@@ -403,6 +405,43 @@
 
       & a
         text-decoration: underline
+
+  &__icon-rows
+    display: flex
+    flex-direction: column
+
+    &-row
+      $border: .1rem solid $color-light
+
+      border-bottom: $border
+      display: flex
+      padding-bottom: $common-spacing
+      padding-top: $common-spacing
+
+      @include bp('landscape')
+        padding-bottom: $common-spacing * 2
+        padding-top: $common-spacing * 2
+
+      &:first-child
+        border-top: $border
+
+    &-icon
+      & > img
+        $size: 10rem
+        height: $size
+        width: $size
+
+        @include bp('portrait')
+          $size: 12rem
+
+    &-content-container
+      margin-left: $common-spacing
+
+      @include bp('portrait')
+        margin-left: $common-spacing * 2
+
+    &-title
+      font-weight: $font-weight-bold
 
   &__cta-link-container
     display: flex
