now using svgs for the icons in the icon row text blocks

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -426,7 +426,7 @@
         border-top: $border
 
     &-icon
-      & > img
+      & > svg
         $size: 10rem
         height: $size
         width: $size
