--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -1,7 +1,7 @@
 @import 'colors'
 
 $color-main: $color-1
-$color-tertiary: $color-2
+$color-tertiary: rgb(25,25,52) // change to $color-dark after merge
 
 @import 'main'
 
