Add momentum scrolling to the job summary list for the benefit of iOS users

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -354,6 +354,7 @@
     @include bp('portrait')
       height: 100%
       overflow-y: auto
+      -webkit-overflow-scrolling: touch
       padding: 0 $common-spacing
 
     &-element
