--- a/web/app/themes/ppj/src/sass/colors.sass
+++ b/web/app/themes/ppj/src/sass/colors.sass
@@ -26,3 +26,6 @@ $color-1: rgb(0,153,204)
 $color-2: rgb(113,11,105)
 $color-3: rgb(0,166,133)
 $color-4: rgb(77,66,223)
+$color-5: rgb(231,59,41)
+$color-6: rgb(0,166,147)
+$color-7: rgb(251,100,0)
