--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -85,6 +85,8 @@
             font-weight: $font-weight-bold
             font-size: 1.6rem
             text-transform: uppercase
+            transition: color $main-transition-duration
+
 
             @include bp('large')
               font-size: 1.8rem
