reverting value of border-top-color of _top-border

--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -2,7 +2,7 @@
   position: relative
 
   &:before
-    border-top-color: $color-tertiary-light
+    border-top-color: $color-grey-medium
     border-top-style: solid
     border-top-width: .2em
     content: ''
