icon row svg color can now be inherited from the leg

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -428,7 +428,10 @@
     &-icon
       & > svg
         $size: 10rem
+
+        fill: $color-tertiary
         height: $size
+        stroke: $color-tertiary
         width: $size
 
         @include bp('portrait')
