changed icon row svg size to prevent flat edges on circle
It appears there are antialiasing artefacts that appear depending on the dimensions of the svg.
This may be caused by using non integer viewbox dimensions.

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -427,15 +427,14 @@
 
     &-icon
       & > svg
-        $size: 10rem
-
         fill: $color-tertiary
-        height: $size
+        height: 10.5rem
         stroke: $color-tertiary
-        width: $size
+        width: 10.2rem
 
         @include bp('portrait')
-          $size: 12rem
+          height: 123px
+          width: 118px
 
     &-content-container
       margin-left: $common-spacing
