--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -30,6 +30,7 @@ $font-size-gigantic: 5.6rem
 
 // modified colors
 $color-main-shadow: darken($color-main, 5%)
+$color-tertiary-light: rgba($color-tertiary, .2)
 
 $length-portrait: 768px
 $length-landscape: 1024px
