removed header bottom border on find a job page

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -1,5 +1,10 @@
-.page-template-find-a-job .page-container
-  height: 100vh
+.page-template-find-a-job
+  & .page-container
+    height: 100vh
+    
+  & .header
+    &:after
+      display: none
 
 .find-a-job-container
   flex-grow: 1
