made header bottom border smaller

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -20,7 +20,7 @@
   z-index: 3
 
   &:after
-    $size: 1rem
+    $size: .8rem
     content: ' '
     background-color: $color-tertiary-light
     bottom: -$size
