removed margin from auto included p tags in header__text

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -149,6 +149,9 @@
     &, & > p
       font-weight: $font-weight-bold
 
+    & > p
+      margin-bottom: 0
+
     @include bp('portrait')
       font-size: 4.2rem
       line-height: 4.8rem
