changed name of jobLocationGroup to location

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -449,7 +449,7 @@
       @include bp('large')
         font-size: 1.8rem
 
-    &--job-location-group
+    &--location
       #{$c}-icon
         background-color: $color-white
         border-color: $color-dark
