Explanatory message shown when the job feed isn't available

--- a/web/app/themes/ppj/src/sass/colors.sass
+++ b/web/app/themes/ppj/src/sass/colors.sass
@@ -22,6 +22,8 @@ $color-body: #33334b
 $color-gradient-dark: $color-very-dark
 $color-gradient-light: $color-dark-section
 
+$color-notification: lightyellow
+
 $color-1: rgb(0,153,204)
 $color-2: rgb(160,0,102)
 $color-3: rgb(0,166,133)
