--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -1,8 +1,10 @@
 .page-template-find-a-job
   & .page-container
     height: 100vh
-    
+
   & .header
+    margin-bottom: 0
+
     &:after
       display: none
 
