reduced font-weight of nav menus

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -95,8 +95,8 @@
 
           &-text
             color: $color-light
-            font-weight: $font-weight-bold
             font-size: 1.6rem
+            font-weight: $font-weight-semi-bold
             text-transform: uppercase
             transition: color $main-transition-duration
 
@@ -305,7 +305,7 @@
   &__nav-leg-menu-list-element
     $nmle: &
     font-size: 1.8rem
-    font-weight: $font-weight-bold
+    font-weight: $font-weight-semi-bold
     padding: 0 $common-spacing
 
     &--selected
