restricted width of site wide nav

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -70,9 +70,10 @@
       &-list
         display: flex
         margin: 0 auto
-        max-width: 128rem
+        max-width: 100%
 
         @include bp('landscape')
+          max-width: 84rem
           padding: 0 $common-spacing * 2
 
         &-element
