included margin for the the job feed messages
this was a medical consideration to reduce the risk of inducing a brain hemorrhage in certain team members

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -172,6 +172,7 @@
   &__job-feed-message
     border-bottom: $border
     border-top: $border
+    margin: 0 $common-spacing $common-spacing
     padding: $common-spacing $common-spacing * 2
     pointer-events: auto
 
