the inter find-a-job page link can now be visible at the same time as the job feed messages

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -324,11 +324,7 @@
 
   &__view-list-container
     @include bp('portrait')
-      bottom: 0
-      left: 0
-      position: absolute
-      right: 0
-      top: $jobs-available-height
+      position: relative
 
     @include bp('landscape')
 
