created a pink warning color for the broken jobs feed message

--- a/web/app/themes/ppj/src/sass/colors.sass
+++ b/web/app/themes/ppj/src/sass/colors.sass
@@ -23,6 +23,7 @@ $color-gradient-dark: $color-very-dark
 $color-gradient-light: $color-dark-section
 
 $color-notification: lightyellow
+$color-warning: #fee
 
 $color-1: rgb(0,153,204)
 $color-2: rgb(160,0,102)
