--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -177,7 +177,7 @@
     pointer-events: auto
 
     &--feed-error
-      background-color: $color-notification
+      background-color: $color-warning
 
       #{$s}__job-feed-text-container
         max-width: 32rem
